--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-library/group-author-library.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-library/group-author-library.component.html
@@ -23,17 +23,17 @@
       </div>
       <div class="d-flex align-items-center">
         <div class="permission-btn-block d-flex align-items-center justify-content-end">
-          <odp-round-radio id="libraryBlocked" name="library" size="20" [checked]="permissionType=='blocked'"
+          <odp-round-radio [edit]="edit" id="libraryBlocked" name="library" size="20" [checked]="permissionType=='blocked'"
             (checkedChange)="permissionType='PNL'"></odp-round-radio>
           <span class="text-dark ml-2">Blocked</span>
         </div>
         <div class="permission-btn-block d-flex align-items-center justify-content-end">
-          <odp-round-radio id="libraryView" name="library" size="20" [checked]="permissionType=='view'"
+          <odp-round-radio [edit]="edit" id="libraryView" name="library" size="20" [checked]="permissionType=='view'"
             (checkedChange)="permissionType='PVL'"></odp-round-radio>
           <span class="text-dark ml-2">View</span>
         </div>
         <div class="permission-btn-block d-flex align-items-center justify-content-end">
-          <odp-round-radio id="libraryManage" name="library" size="20" [checked]="permissionType=='manage'"
+          <odp-round-radio [edit]="edit" id="libraryManage" name="library" size="20" [checked]="permissionType=='manage'"
             (checkedChange)="permissionType='PML'"></odp-round-radio>
           <span class="text-dark ml-2">Manage</span>
         </div>
